# pyTools_resoLab

./: .gitignore  CONTRIBUTING.md  DELIVERABLES_LIST.md  EDGE_DETECTION_FEATURES.md  FIX_MODULE_CONFLICT.sh  GITHUB_PUSH_INSTRUCTIONS.txt  GIT_COMMANDS_TO_PUSH.txt  LICENSE  MANIFEST.in  PROJECT_COMPLETION_CHECKLIST.md  QUICKSTART.md  README.md  README_INDEX.md  SFR_app_v2.py  UI_IMPROVEMENTS.md  VISUAL_GUIDE.md  ZOOM_FEATURE.md  ZOOM_FEATURE_VERIFICATION.md  __init__.py  build_exe.sh  constants.py  debug.ipynb  image_label.py  image_viewer_app.py  install_module.py  main.py  mainUI.py  mainUI.ui  mainUI_auto.py  py2app_build.sh  pyTools_ResoLab.spec  pyproject.toml  recent_files.json  recent_roi_files.json  requirements.txt  run_app.py  run_sfr_app.sh  setup.py  sfr_calculator.py  test_edge_detection.py  (+1 more)
.github/workflows/: publish.yml
doc/: EXE_PACKAGING_GUIDE.md
makedown/: CLICK_40x40_SELECTION_UPDATE.md  CLICK_SIZE_INPUT_BOX.md  CRASH_FIX_DUPLICATE_PAINTEVENT.md  DELIVERABLES_LIST.md  EDGE_DETECTION_QUICK_REFERENCE.md  FINAL_CHECKLIST.md  FINAL_PROJECT_STATUS.md  FINAL_REPORT.md  FREQUENCY_COMPENSATION.md  ISO_12233_2023_IMPLEMENTATION.md  LAYOUT_RESET_SUMMARY.md  LSF_PEAK_SMOOTHING.md  LSF_SMOOTHING_METHODS_KWARG.md  LSF_SMOOTHING_METHOD_UI.md  MODULE_CONFLICT_RESOLUTION.txt  MOUSE_WHEEL_FIX.md  NY4_COMPENSATION_FIX.md  NY4_SUPERSAMPLING_UPDATE.md  NY4_TEXT_ANNOTATION.md  QUICKSTART.md  RAW_IMAGE_ANALYSIS_REPORT.md  README_INDEX.md  ROI_DISPLAY_AREA_SEPARATED.md  SCROLLBAR_FIX.md  SECOND_SELECTION_MODE.md  SELECTION_SCROLLBAR_FIX.md  SFR_DISPLAY_REMOVAL.md  SFR_IMATEST_COMPARISON.md  SFR_XAXIS_COMPENSATION_NY_INPUT.md  SUPERSAMPLING_IMPLEMENTATION.md  THREE_PLOTS_DISPLAY.md  VERIFICATION_REPORT.md  WHITE_AREA_COMPENSATION.md
