[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTools-ResoLab"
version = "2.4.0"
description = "Professional SFR/MTF Analyzer for raw camera images - ISO 12233:2023 compliant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sam Lai", email = "samlai1030@gmail.com"}
]
keywords = ["sfr", "mtf", "image-analysis", "camera", "iso12233", "image-quality", "raw-image"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/samlai1030/pyTools_ResoLab"
Repository = "https://github.com/samlai1030/pyTools_ResoLab.git"
Issues = "https://github.com/samlai1030/pyTools_ResoLab/issues"

[project.scripts]
pytools-resolab = "main:main"

[project.gui-scripts]
pytools-resolab-gui = "main:main"

[tool.setuptools]
py-modules = ["main", "mainUI"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.ui", "*.json"]

